Fixed logo display issue on mobile views

--- a/global.css
+++ b/global.css
@@ -5,21 +5,6 @@
   height: 8vw;
 }
 
-.toggle-row {
-  margin-top: 100px;
-  align-items: center;
-  text-align: center;
-  justify-content: space-around;
-  padding-bottom: 100px;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
 /* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
